test/invalid-semantics/57163_altering_a_constant/you_cant_alter_a_const_value.mag
-- Author: 57163, Guilherme Dias
-- Maybe since const is a highlevel declaration and not an expression,
-- this might be a syntatical error

const val : Int = 10

const str : String = "MY STRING"

fun main (_) : Unit -> Unit =
    val = val * val; -- Can't alter constant value!
    print(str);
    print(val)
